--- a/src/lib/styles/main.css
+++ b/src/lib/styles/main.css
@@ -30,11 +30,9 @@ html {
   scrollbar-gutter: stable;
 
   --color-cream: #f4f4f4;
-}
-
-.full-bleed {
-  width: 100%;
-  grid-column: 1 / 4;
+  --color-sea-blue: #04a5bb;
+  --color-medium-sea-blue: #008ba3;
+  --color-dark-sea-blue: #00758f;
 }
 
 body {
