--- a/src/lib/styles/prose.css
+++ b/src/lib/styles/prose.css
@@ -1,28 +1,23 @@
 .prose {
-  color: #373632;
-
   width: 100%;
+  margin: 0 auto;
 
   display: grid;
   grid-template-columns:
     1fr
-    min(var(--width-3xl), 100%)
+    min(var(--width-3xl), calc(100% - 2 * var(--spacing-4)))
     1fr;
+
+  color: var(--color-gray-600);
+  font-size: var(--text-base);
+  line-height: var(--leading-relaxed);
 
   > * {
     grid-column: 2;
   }
 
   > *:not(p) {
-    margin-block: var(--spacing-6);
-  }
-  /* Reduce spacing for certain elements */
-  > :is(h1, h2, h3, h4, h5, h6) {
-    margin-block: var(--spacing-8) var(--spacing-4);
-  }
-
-  > :is(ul, ol, blockquote, pre, .shiki) {
-    margin-block: var(--spacing-4);
+    margin-bottom: var(--spacing-6);
   }
 
   .full-bleed {
@@ -30,31 +25,13 @@
     grid-column: 1 / 4;
   }
 
-  > *:first-child {
-    margin-top: 0;
-  }
-
   > *:last-child {
     margin-bottom: 0;
   }
 
-  /* Better spacing for consecutive elements */
-  * ~ p {
-    margin-top: var(--spacing-4);
-  }
-
-  * ~ ul,
-  * ~ ol {
-    margin-top: var(--spacing-3);
-  }
-
   /* Reduce spacing between related elements */
   :is(h1, h2, h3, h4, h5, h6) + p {
-    margin-top: var(--spacing-2);
-  }
-
-  p + :is(ul, ol) {
-    margin-top: var(--spacing-2);
+    margin-top: var(--spacing-0);
   }
 
   h1,
@@ -63,54 +40,63 @@
   h4,
   h5,
   h6 {
-    margin-bottom: var(--spacing-3);
-    margin-top: var(--spacing-8);
+    margin-bottom: var(--spacing-4);
 
     position: relative;
 
     font-family: var(--font-serif);
-    color: var(--color-black);
+    color: var(--color-neutral-800);
     font-weight: var(--font-weight-medium);
-    line-height: 1.25;
+    line-height: var(--leading-tight);
+    letter-spacing: var(--tracking-tight);
 
     a {
       text-decoration: none;
       font: inherit;
+      color: inherit;
     }
-  }
-
-  /* First heading should have less top margin */
-  > :is(h1, h2, h3, h4, h5, h6):first-child {
-    margin-top: 0;
   }
 
   h1 {
     font-size: var(--text-4xl);
     line-height: var(--text-4xl--line-height);
-    margin-top: var(--spacing-12);
+    margin-top: var(--spacing-16);
   }
 
   h2 {
     font-size: var(--text-3xl);
     line-height: var(--text-3xl--line-height);
-    margin-top: var(--spacing-10);
+    margin-top: var(--spacing-12);
   }
 
   h3 {
     font-size: var(--text-2xl);
     line-height: var(--text-2xl--line-height);
-    margin-top: var(--spacing-8);
+    margin-top: var(--spacing-10);
   }
 
   h4 {
     font-size: var(--text-xl);
     line-height: var(--text-xl--line-height);
+    margin-top: var(--spacing-8);
+  }
+
+  h5 {
+    font-size: var(--text-lg);
+    line-height: var(--text-lg--line-height);
+    margin-top: var(--spacing-6);
+  }
+
+  h6 {
+    font-size: var(--text-base);
+    line-height: var(--text-base--line-height);
     margin-top: var(--spacing-6);
   }
 
   :is(h1, h2, h3, h4, h5, h6) {
     &:hover a::before {
       opacity: 1;
+      transform: translateX(-2px) translateY(-50%);
     }
 
     a {
@@ -118,90 +104,83 @@
     }
 
     a::before {
-      content: url('../assets//icons/link.svg');
+      content: url('../assets/icons/link.svg');
       position: absolute;
-      left: -24px;
+      left: calc(-1 * var(--spacing-6));
       top: 50%;
 
       opacity: 0;
-      translate: 0 -50%;
+      transform: translateY(-50%);
       transition:
-        opacity 200ms ease-in,
-        transform 200ms ease-in;
+        opacity var(--default-transition-duration) var(--ease-out),
+        transform var(--default-transition-duration) var(--ease-out);
     }
   }
 
-  :is(h1, h2, h3, h4, h5, h6) + * {
-    margin-top: var(--spacing-2);
-  }
-
-  /* Better paragraph spacing */
-  p {
-    line-height: 1.7;
-    margin-block: var(--spacing-4);
-  }
-
-  p:first-child {
-    margin-top: 0;
-  }
-
-  p:last-child {
+  :is(h1, h2, h3, h4, h5, h6):has(+ :is(ul, ol)) {
     margin-bottom: 0;
   }
 
-  img {
-    border-radius: var(--radius-3xl);
+  p {
+    line-height: var(--leading-relaxed);
+    margin-block: var(--spacing-4);
   }
 
-  a {
-    color: var(--color-black);
-    font-weight: var(--font-weight-semibold);
+  img {
+    border-radius: var(--radius-lg);
+    box-shadow: var(--shadow-sm);
+  }
+
+  a:not(.data-footnote-backref) {
+    color: var(--color-sea-blue);
+    font-weight: var(--font-weight-medium);
     text-decoration: underline;
-    text-decoration-color: var(--color-black);
+    text-decoration-color: transparent;
+    text-underline-offset: 2px;
 
     transition-property: color, text-decoration-color;
     transition-duration: var(--default-transition-duration);
     transition-timing-function: var(--default-transition-timing-function);
-  }
 
-  a:hover {
-    color: var(--color-black);
-    text-decoration-color: var(--color-black);
+    &:hover {
+      color: var(--color-dark-sea-blue);
+      text-decoration-color: var(--color-dark-sea-blue);
+    }
   }
 
   strong {
-    color: var(--color-black);
+    color: var(--color-gray-800);
     font-weight: var(--font-weight-bold);
   }
 
   code:not(.shiki *) {
-    background-color: #fff;
+    background-color: var(--color-white);
+    color: var(--color-gray-800);
 
-    display: inline-block;
-
-    font-family: monospace;
-    font-size: var(--font-size-sm);
-    font-weight: var(--font-weight-light);
+    font-family: var(--font-mono);
+    font-size: var(--text-sm);
+    line-height: var(--text-sm--line-height);
+    font-weight: var(--font-weight-medium);
 
     padding: var(--spacing-0_5) var(--spacing-1);
 
-    border: 1px solid #e9e9e7;
-    border-radius: var(--radius-md);
+    border: 1px solid var(--color-gray-200);
+    border-radius: var(--radius-sm);
   }
 
   a code {
     color: inherit;
   }
 
-  :is(h1, h2, h3) code {
-    font-weight: var(--font-weight-black);
+  :is(h1, h2, h3, h4, h5, h6) code {
+    font-weight: var(--font-weight-bold);
   }
 
   blockquote {
-    padding: var(--spacing-4) var(--spacing-6);
-    margin-block: var(--spacing-6);
+    padding: var(--spacing-6) var(--spacing-8);
+    /* margin-block: var(--spacing-8); */
 
-    border-left: 3px solid var(--color-gray-300);
+    border-left: 4px solid var(--color-sea-blue);
     background-color: var(--color-gray-50);
     border-radius: var(--radius-md);
 
@@ -218,15 +197,16 @@
   }
 
   figcaption {
-    color: var(--color-black);
-    font-size: var(--font-size-sm);
-    line-height: var(--line-height-6);
-
+    color: var(--color-gray-500);
+    font-size: var(--text-sm);
+    line-height: var(--text-sm--line-height);
+    font-style: italic;
+    text-align: center;
     margin-top: var(--spacing-3);
   }
 
   figcaption > p {
-    margin: var(--spacing-0);
+    margin: 0;
   }
 
   ul {
@@ -237,16 +217,6 @@
     list-style-type: decimal;
   }
 
-  /* pre {
-    margin-inline: -3rem;
-  } */
-
-  /* @media (min-width: 768px) {
-    pre {
-      margin-inline: -3rem;
-    }
-  } */
-
   ul,
   ol {
     padding-left: var(--spacing-5);
@@ -254,22 +224,15 @@
   }
 
   li {
-    margin-block: var(--spacing-1_5);
+    margin-block: var(--spacing-2);
     padding-left: var(--spacing-2);
-    line-height: 1.6;
+    line-height: var(--leading-relaxed);
   }
 
   li::marker {
-    font-size: var(--font-size-sm);
+    font-size: var(--text-sm);
     font-weight: var(--font-weight-semibold);
-  }
-
-  ol > li::marker {
-    color: var(--color-gray-700);
-  }
-
-  ul > li::marker {
-    color: var(--color-gray-700);
+    color: var(--color-gray-600);
   }
 
   li :is(ol, ul) {
@@ -302,82 +265,72 @@
   hr {
     margin-block: var(--spacing-12);
     border: none;
-    border-top: 1px solid var(--color-gray-200);
+    border-top: 1px solid var(--color-gray-300);
   }
 
   table {
     width: 100%;
-
-    table-layout: auto;
-
-    text-align: left;
-    font-size: var(--font-size-sm);
-  }
-
-  thead {
-    border-bottom-width: 1px;
-    border-bottom-color: var(--color-black);
+    border-collapse: collapse;
+    margin-bottom: var(--spacing-8);
+    font-size: var(--text-sm);
+    line-height: var(--text-sm--line-height);
+    background-color: var(--color-white);
+    border: 1px solid var(--color-gray-200);
+    border-radius: var(--radius-md);
+    overflow: hidden;
   }
 
   thead th {
-    color: var(--color-black);
+    color: var(--color-gray-800);
     font-weight: var(--font-weight-semibold);
+    text-align: left;
+    padding: var(--spacing-3) var(--spacing-4);
+    background-color: var(--color-gray-50);
+    border-bottom: 2px solid var(--color-gray-200);
 
-    vertical-align: bottom;
-    padding-bottom: var(--spacing-2);
-  }
-
-  thead th:not(:first-child) {
-    padding-left: var(--spacing-2);
-  }
-
-  thead th:not(:last-child) {
-    padding-right: var(--spacing-2);
+    &:not(:last-child) {
+      border-right: 1px solid var(--color-gray-200);
+    }
   }
 
   tbody tr {
-    border-bottom: 1px solid var(--color-black);
+    border-bottom: 1px solid var(--color-gray-100);
   }
 
   tbody tr:last-child {
-    border-bottom-width: 0;
+    border-bottom: none;
   }
 
-  thead td {
-    vertical-align: baseline;
-  }
+  tbody td {
+    padding: var(--spacing-3) var(--spacing-4);
+    color: var(--color-gray-600);
 
-  tfoot {
-    border-top: 1px solid var(--color-black);
+    &:not(:last-child) {
+      border-right: 1px solid var(--color-gray-100);
+    }
   }
 
   tfoot td {
-    vertical-align: top;
-  }
+    padding: var(--spacing-3) var(--spacing-4);
+    font-weight: var(--font-weight-medium);
+    color: var(--color-gray-700);
+    border-top: 1px solid var(--color-gray-200);
 
-  :is(tbody, tfoot) td {
-    padding-block: var(--spacing-2);
-  }
-
-  :is(tbody, tfoot) td:not(:first-child) {
-    padding-left: var(--spacing-2);
-  }
-
-  :is(tbody, tfoot) td:not(:last-child) {
-    padding-right: var(--spacing-2);
+    &:not(:last-child) {
+      border-right: 1px solid var(--color-gray-200);
+    }
   }
 }
 
 .shiki {
   border-radius: var(--radius-lg);
   padding-block: var(--spacing-4);
-  font-size: var(--font-size-sm);
-  line-height: var(--font-size-base--line-height);
+  font-size: var(--text-base);
+  line-height: var(--text-base--line-height);
   box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
   overflow-x: auto;
   scrollbar-width: none;
   -ms-overflow-style: none;
-  -webkit-font-smoothing: antialiased;
 
   &::-webkit-scrollbar {
     display: none;
@@ -430,24 +383,22 @@
     }
 
     &.diff.add {
-      /* Higher contrast green for additions */
       border-left-color: rgba(16, 185, 129, 0.9) !important;
       background-color: rgba(16, 185, 129, 0.25) !important;
 
       span:first-child::before {
         content: '+';
-        color: rgba(5, 150, 105, 1); /* Darker green for better contrast */
+        color: rgba(5, 150, 105, 1);
       }
     }
 
     &.diff.remove {
-      /* Higher contrast red for removals */
       border-left-color: rgba(239, 68, 68, 0.9) !important;
       background-color: rgba(239, 68, 68, 0.25) !important;
 
       span:first-child::before {
         content: '-';
-        color: rgba(220, 38, 38, 1); /* Darker red for better contrast */
+        color: rgba(220, 38, 38, 1);
       }
     }
 
