--- a/src/lib/styles/shiki.css
+++ b/src/lib/styles/shiki.css
@@ -94,7 +94,9 @@
     &.has-focus:not(.focused) {
       filter: blur(0.095rem);
       opacity: 0.7;
-      transition: filter 0.35s, opacity 0.35s;
+      transition:
+        filter 0.35s,
+        opacity 0.35s;
     }
   }
 }
